--- a/NumPy_Lab3.ipynb
+++ b/NumPy_Lab3.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "93c0c316-d198-4cdc-b366-1cfcdc48a6b8",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "da6b2527-511c-4e40-82c7-c56428b67929",
    "metadata": {},
    "outputs": [],
@@ -41,12 +41,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "bf5f8525-0a6c-4d59-88be-8e89067281f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1- Hamad\n",
+      "2- Reem\n",
+      "3- Fahad\n",
+      "4- Saleh\n",
+      "5- Mohammed\n",
+      "6- Nora\n",
+      "7- Khaled\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "# Sort the names based on ages in decreasing order\n",
+    "sorted_names = names[np.argsort(ages)[::-1]]\n",
+    "\n",
+    "# Print the sorted names\n",
+    "for i, name in enumerate(sorted_names, 1):\n",
+    "    print(f\"{i}- {name}\")"
    ]
   },
   {
@@ -75,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "ab02fa69-e4ec-4025-8fcb-7a59db6c622c",
    "metadata": {},
    "outputs": [],
@@ -85,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "bd565605-22a1-497f-9925-773a9b7c7140",
    "metadata": {},
    "outputs": [],
@@ -97,12 +117,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fc2062d3-4cd4-4797-a472-15422b444b47",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average temperature for the year: 35.0\n",
+      "Months with temperature above 35 degrees: ['January', 'February', 'August', 'September', 'October', 'November', 'December']\n",
+      "Month with the highest temperature: September\n",
+      "Month with the lowest temperature: May\n",
+      "Temperature range for the year: 33\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "# Task 1: Calculate the average temperature for the year\n",
+    "average_temperature = np.mean(temperature_data)\n",
+    "print(\"Average temperature for the year:\", average_temperature)\n",
+    "\n",
+    "# Task 2: Find the months with temperature above a certain threshold\n",
+    "above_threshold_months = [month for month, temp in zip(month_names, temperature_data) if temp > threshold]\n",
+    "print(\"Months with temperature above\", threshold, \"degrees:\", above_threshold_months)\n",
+    "\n",
+    "# Task 3: Determine the month with the highest and lowest temperature\n",
+    "highest_temp_month = month_names[np.argmax(temperature_data)]\n",
+    "lowest_temp_month = month_names[np.argmin(temperature_data)]\n",
+    "print(\"Month with the highest temperature:\", highest_temp_month)\n",
+    "print(\"Month with the lowest temperature:\", lowest_temp_month)\n",
+    "\n",
+    "# Task 4: Calculate the temperature range\n",
+    "temperature_range = np.max(temperature_data) - np.min(temperature_data)\n",
+    "print(\"Temperature range for the year:\", temperature_range)"
    ]
   },
   {
