--- a/NumPy_Lab3.ipynb
+++ b/NumPy_Lab3.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "id": "93c0c316-d198-4cdc-b366-1cfcdc48a6b8",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "id": "da6b2527-511c-4e40-82c7-c56428b67929",
    "metadata": {},
    "outputs": [],
@@ -41,12 +41,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "id": "bf5f8525-0a6c-4d59-88be-8e89067281f6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "sorted_ages= np.argsort(ages)[::-1]\n",
+    "sorted_names = names[sorted_ages]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "f3536d79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1- Hamad\n",
+      "2- Reem\n",
+      "3- Fahad\n",
+      "4- Saleh\n",
+      "5- Mohammed\n",
+      "6- Nora\n",
+      "7- Khaled\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, names in enumerate(sorted_names, start=1):\n",
+    "    print(f\"{i}- {names}\")"
    ]
   },
   {
@@ -75,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 61,
    "id": "ab02fa69-e4ec-4025-8fcb-7a59db6c622c",
    "metadata": {},
    "outputs": [],
@@ -85,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "id": "bd565605-22a1-497f-9925-773a9b7c7140",
    "metadata": {},
    "outputs": [],
@@ -97,12 +123,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "fc2062d3-4cd4-4797-a472-15422b444b47",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35.0\n",
+      "(array([ 0,  1,  7,  8,  9, 10, 11]),)\n",
+      "48 15\n",
+      "33\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "print(temperature_data.mean())\n",
+    "print(np.where(temperature_data > threshold))\n",
+    "print(temperature_data.max() , temperature_data.min())\n",
+    "print(temperature_data.max() - temperature_data.min())"
    ]
   },
   {
@@ -117,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "a642594f-b33d-4b5d-a2d4-44b13f6f45d0",
    "metadata": {},
    "outputs": [],
@@ -130,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "5a6cb79c-3359-4505-8a26-59c4dab1977f",
    "metadata": {},
    "outputs": [],
@@ -175,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
