--- a/NumPy_Lab3.ipynb
+++ b/NumPy_Lab3.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names = np.array((\"Khaled\", \"Hamad\", \"Mohammed\", \"Reem\",\"Fahad\", \"Saleh\", \"Nora\"))\n",
+    "names = np.array((\"Khaled\", \"Sarah\", \"Mohammed\", \"Reem\",\"Fahad\", \"Saleh\", \"Nora\"))\n",
     "ages = np.array((17, 60, 21, 55, 29, 24, 19))"
    ]
   },
