--- a/NumPy_Lab3.ipynb
+++ b/NumPy_Lab3.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "93c0c316-d198-4cdc-b366-1cfcdc48a6b8",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "da6b2527-511c-4e40-82c7-c56428b67929",
    "metadata": {},
    "outputs": [],
@@ -41,12 +41,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "bf5f8525-0a6c-4d59-88be-8e89067281f6",
+   "execution_count": 82,
+   "id": "b0b3d144-e50c-4611-a3ff-ac0f875a55c5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "sorted_ages = np.argsort(ages)[::-1]\n",
+    "sorted_names = names[sorted_ages]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "3b5069f0-b347-4400-b2c5-b5c807662e5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Hamad\n",
+      "2. Reem\n",
+      "3. Fahad\n",
+      "4. Saleh\n",
+      "5. Mohammed\n",
+      "6. Nora\n",
+      "7. Khaled\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(sorted_names)):\n",
+    "    print(f'{i+1}. {sorted_names[i]}')"
    ]
   },
   {
@@ -75,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "id": "ab02fa69-e4ec-4025-8fcb-7a59db6c622c",
    "metadata": {},
    "outputs": [],
@@ -85,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "id": "bd565605-22a1-497f-9925-773a9b7c7140",
    "metadata": {},
    "outputs": [],
@@ -97,12 +123,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "fc2062d3-4cd4-4797-a472-15422b444b47",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "#1\n",
+    "av_temp = np.mean(temperature_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "32925580-3ea2-46e3-9885-81a3b87adbbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[40 38 40 48 45 40 43]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2\n",
+    "month_high = np.where(temperature_data > threshold)\n",
+    "m_h=np.array(0)\n",
+    "for i in month_high:\n",
+    "    m_h=temperature_data[i]\n",
+    "print(m_h)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "68c92572-0c3a-4055-9de0-4027fb4e9657",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#3\n",
+    "highest_temp_month = month_names[np.argmax(temperature_data)]\n",
+    "lowest_temp_month = month_names[np.argmin(temperature_data)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "3a7151b9-94d3-4935-a970-e33aceb4f3fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#4\n",
+    "tempe_range = np.max(temperature_data) - np.min(temperature_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "67a3c207-ac0e-4eb6-810b-d1780ca48140",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average temperature: 35.00 degrees Celsius\n",
+      "Months with temperatures above 35 degrees Celsius: [40 38 40 48 45 40 43]\n",
+      "Month with the highest temperature: September\n",
+      "Month with the lowest temperature: May\n",
+      "Temperature range: 33.00 degrees Celsius\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Average temperature: {av_temp:.2f} degrees Celsius')\n",
+    "print(f'Months with temperatures above {threshold} degrees Celsius: {m_h}')\n",
+    "print(f'Month with the highest temperature: {highest_temp_month}')\n",
+    "print(f'Month with the lowest temperature: {lowest_temp_month}')\n",
+    "print(f'Temperature range: {tempe_range:.2f} degrees Celsius')"
    ]
   },
   {
@@ -175,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
