--- a/NumPy_Lab3.ipynb
+++ b/NumPy_Lab3.ipynb
@@ -30,23 +30,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "da6b2527-511c-4e40-82c7-c56428b67929",
    "metadata": {},
    "outputs": [],
    "source": [
-    "names = np.array((\"Khaled\", \"Sarah\", \"Mohammed\", \"Reem\",\"Fahad\", \"Saleh\", \"Nora\"))\n",
+    "names = np.array((\"Khaled\", \"Hamad\", \"Mohammed\", \"Reem\",\"Fahad\", \"Saleh\", \"Nora\"))\n",
     "ages = np.array((17, 60, 21, 55, 29, 24, 19))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "bf5f8525-0a6c-4d59-88be-8e89067281f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hamad' 'Reem' 'Fahad' 'Saleh' 'Mohammed' 'Nora' 'Khaled']\n",
+      "[60 55 29 24 21 19 17]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "sortedAges = np.argsort(ages)[::-1]\n",
+    "sortedNames = names[sortedAges]\n",
+    "print(sortedNames)\n",
+    "print(ages[sortedAges])"
    ]
   },
   {
@@ -75,21 +87,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "ab02fa69-e4ec-4025-8fcb-7a59db6c622c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import calendar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "bd565605-22a1-497f-9925-773a9b7c7140",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "month_names = list(calendar.month_name)[1:]\n",
     "temperature_data = np.array([40, 38, 28, 20, 15, 28, 35, 40, 48, 45, 40, 43])\n",
     "threshold = 35"
@@ -97,12 +111,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "fc2062d3-4cd4-4797-a472-15422b444b47",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The avg temp is: 35.0\n",
+      "********************\n",
+      "Months temp above 35: ['January' 'February' 'August' 'September' 'October' 'November' 'December']\n",
+      "********************\n",
+      "The highest month is: September , and the lowest month is: May\n",
+      "********************\n",
+      "tempreature range is: 33\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "print(f'The avg temp is: {temperature_data.mean()}')\n",
+    "print(\"*\"*20)\n",
+    "aboveThreshold= np.array(month_names)[temperature_data > threshold]\n",
+    "print(f'Months temp above 35: {aboveThreshold}')\n",
+    "print(\"*\"*20)\n",
+    "maxTemp = np.argmax(temperature_data)\n",
+    "minTemp = np.argmin(temperature_data)\n",
+    "highestMonth = month_names[maxTemp]\n",
+    "lowestMonth = month_names[minTemp]\n",
+    "print(f'The highest month is: {highestMonth} , and the lowest month is: {lowestMonth}')\n",
+    "print(\"*\"*20)\n",
+    "tempRange = np.max(temperature_data) - np.min(temperature_data)\n",
+    "print(f'tempreature range is: {tempRange}')"
    ]
   },
   {
@@ -117,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "id": "a642594f-b33d-4b5d-a2d4-44b13f6f45d0",
    "metadata": {},
    "outputs": [],
@@ -130,12 +170,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "5a6cb79c-3359-4505-8a26-59c4dab1977f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The avg scores for each subject, math:80.6 , ML: 81.8 , DS: 78.6\n",
+      "The highest scores for each subject, math:92 , ML: 92 , DS: 88\n",
+      "The minimum scores for each subject, math:68 , ML: 64 , DS: 70\n",
+      "The standard diviation of scores for each subject, math:8.662563131083086 , ML: 10.127191120937729 , DS: 6.118823416311342\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "print(f'The avg scores for each subject, math:{math_scores.mean()} , ML: {ML_scores.mean()} , DS: {DS_scores.mean()}')\n",
+    "print(f'The highest scores for each subject, math:{math_scores.max()} , ML: {ML_scores.max()} , DS: {DS_scores.max()}')\n",
+    "print(f'The minimum scores for each subject, math:{math_scores.min()} , ML: {ML_scores.min()} , DS: {DS_scores.min()}')\n",
+    "print(f'The standard diviation of scores for each subject, math:{math_scores.std()} , ML: {ML_scores.std()} , DS: {DS_scores.std()}')\n",
+    "print('#'*20)\n"
    ]
   },
   {
@@ -175,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
