--- a/NumPy_Lab3.ipynb
+++ b/NumPy_Lab3.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "93c0c316-d198-4cdc-b366-1cfcdc48a6b8",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "da6b2527-511c-4e40-82c7-c56428b67929",
    "metadata": {},
    "outputs": [],
@@ -41,12 +41,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "bf5f8525-0a6c-4d59-88be-8e89067281f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Sarah\n",
+      "2. Reem\n",
+      "3. Fahad\n",
+      "4. Saleh\n",
+      "5. Mohammed\n",
+      "6. Nora\n",
+      "7. Khaled\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "s_ages = np.argsort(ages)[::-1]\n",
+    "s_names = names[s_ages]\n",
+    "for i in range(len(s_names)):\n",
+    "    print('{}. {}'.format(i+1,s_names[i]))"
    ]
   },
   {
@@ -75,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "ab02fa69-e4ec-4025-8fcb-7a59db6c622c",
    "metadata": {},
    "outputs": [],
@@ -85,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "bd565605-22a1-497f-9925-773a9b7c7140",
    "metadata": {},
    "outputs": [],
@@ -97,12 +114,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "fc2062d3-4cd4-4797-a472-15422b444b47",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "month_names = list(calendar.month_name)[1:]\n",
+    "temperature_data = np.array([40, 38, 28, 20, 15, 28, 35, 40, 48, 45, 40, 43])\n",
+    "threshold = 35\n",
+    "av = np.mean(temperature_data)\n",
+    "high= np.where(temperature_data > threshold)\n",
+    "q=np.array(1)\n",
+    "for i in high:\n",
+    "    q=temperature_data[i]\n",
+    "highest= month_names[np.argmax(temperature_data)]\n",
+    "lowest = month_names[np.argmin(temperature_data)]\n",
+    "range = np.max(temperature_data) - np.min(temperature_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "97700044-aa42-4959-bb53-16d61f861174",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average temperature: 35.0 degrees Celsius\n",
+      "Months with temperatures above 35 degrees Celsius: [40 38 40 48 45 40 43]\n",
+      "Month with the highest temperature: September\n",
+      "Month with the lowest temperature: May\n",
+      "Temperature range: 33 degrees Celsius\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Average temperature: {av} degrees Celsius\")\n",
+    "print(f\"Months with temperatures above {threshold} degrees Celsius:\", q)\n",
+    "print(f\"Month with the highest temperature: {highest}\")\n",
+    "print(f\"Month with the lowest temperature: {lowest}\")\n",
+    "print(f\"Temperature range: {range} degrees Celsius\")"
    ]
   },
   {
@@ -175,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
