--- a/NumPy_Lab3.ipynb
+++ b/NumPy_Lab3.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "93c0c316-d198-4cdc-b366-1cfcdc48a6b8",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "da6b2527-511c-4e40-82c7-c56428b67929",
    "metadata": {},
    "outputs": [],
@@ -41,12 +41,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "bf5f8525-0a6c-4d59-88be-8e89067281f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hamad\n",
+      "Reem\n",
+      "Fahad\n",
+      "Saleh\n",
+      "Mohammed\n",
+      "Nora\n",
+      "Khaled\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "joined = np.array([names, ages])\n",
+    "\n",
+    "sorted_arr = np.argsort(joined[1])[::-1]\n",
+    "\n",
+    "for index in sorted_arr:\n",
+    "    print(names[index])\n",
+    "\n"
    ]
   },
   {
@@ -75,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "id": "ab02fa69-e4ec-4025-8fcb-7a59db6c622c",
    "metadata": {},
    "outputs": [],
@@ -85,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "id": "bd565605-22a1-497f-9925-773a9b7c7140",
    "metadata": {},
    "outputs": [],
@@ -97,12 +117,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "fc2062d3-4cd4-4797-a472-15422b444b47",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35.0\n",
+      "['January' 'February' 'August' 'September' 'October' 'November' 'December']\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "print(np.mean(temperature_data))\n",
+    "\n",
+    "above_threshold = temperature_data > threshold\n",
+    "month_above_th = np.array(month_names)[above_threshold]\n",
+    "print(month_above_th)"
    ]
   },
   {
@@ -175,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
